<resources>
    <string name="app_name">Eu, Colaborador!</string>

    <string name="navigation_menu">Início</string>
    <string name="navigation_infos">Informações</string>
    <string name="navigation_prevencao">Prevençāo</string>
    <string name="navigation_maps">Mapa</string>

    <string name="welcome_title">"Bem-vindo(a) ao Eu, Colaborador!"</string>
    <string name="welcome_text">Um aplicativo para a colaboração popular na identificação de locais de risco de transmissão da dengue e demais doenças associadas ao mosquito Aedes Aegypt.</string>

    <string name="menu_option_title">Menu</string>
    <string name="menu_option_residence_verification">"Fazer verificaçāo de residência"</string>
    <string name="menu_option_sick_person">"Cadastrar pessoa doente</string>
    <string name="menu_option_complaint">"Realizar denuncia de possivel foco"</string>
    <string name="menu_option_edit_perfil">"Editar perfil pessoal</string>
    <string name="menu_option_logout">Sair</string>
    <string name="toast_logout">"Logout realizado com sucesso"</string>

    <string name="login_title">Login</string>
    <string name="login_subtitle">Se você já possui cadastro é só inserir os dados abaixo</string>
    <string name="login_field_login">Digite seu CPF</string>
    <string name="login_field_password">Digite sua senha</string>
    <string name="login_click_forgot_password"><u>Esqueci minha senha</u></string>
    <string name="login_text_without_account">Nāo possui conta?</string>
    <string name="login_click_go_to_register"><u>Cadastre-se aqui!</u></string>
    <string name="login_button">ENTRAR</string>
    <string name="toast_login_incorrect">Login e/ou Senha incorretos</string>
    <string name="toast_login_empty">Campos obrigatórios não preenchidos</string>

    <string name="register_title">Cadastro</string>
    <string name="register_subtitle">Para ter acesso nesse aplicativo é necessário cadastro com os campos abaixo</string>
...
    <string name="sickperson_pessoaButton">Cadastrar Pessoa</string>
    <string name="sickperson_address">Logradouro</string>
    <string name="enfermo_tutorial_cpf">Insira aqui o CPF da pessoa que está doente. O uso do CPF visa garantir que se trata de uma pessoa real, sendo mantida toda a privacidade dos dados informados.</string>
    <string name="enfermo_tutorial_endereco">Para melhor mapeamento da doença, você poderá cadastrar 2 endereços, um de sua residência e um para o local de trabalho da pessoa que está doente.</string>

    <string name="titulo_cadastrarendereco">Cadastrar Endereço</string>
    <string name="campo_estado">Estado</string>
    <string name="campo_cidade">Cidade</string>
    <string name="campo_bairro">Bairro</string>
    <string name="campo_cep">Cep</string>
    <string name="campo_logradouro">Logradouro <i>(Rua/Avenida/Travessa)</i> </string>
    <string name="campo_numero">Numero</string>

    <string name="toast_unavailable_service">Serviço indisponível no momento</string>
    <string name="toast_field_not_selected">Nenhum campo foi selecionado</string>
    <string name="cadastro_completo">Cadastro concluído com sucesso</string>

    <string name="cpfinvalido">CPF inválido</string>
    <string name="checklist_residencia">Checklist Residencia</string>
    <string name="checklist_sucesso_titulo">Lista salva com sucesso</string>
    <string name="salvar">SALVAR</string>

    <string name="denuncia_local_title">Denúncia de possível foco</string>
    <string name="denuncia_local_subtitle">Esse espaço é reservado para realizar denúncia de um possível foco que você localizou mas antes precisamos de algumas informações que estāo abaixo:</string>
    <string name="denuncia_local_btn_endereco">Digitar endereço</string>
    <string name="denuncia_local_btn_gps">Buscar endereço por GPS</string>
    <string name="denuncia_local_tv_endereco">Endereço:</string>
    <string name="denuncia_local_btn_editar_endereco">Editar endereço</string>
    <string name="denuncia_local_btn">Salvar Denúncia</string>
    <string name="denuncia_local_sucesso_titulo">Denúncia realizada com sucesso</string>
    <string name="toast_sem_conexao">Nāo é possivel pesquisar por GPS sem conexāo com a internet</string>

    <string name="prevencao_title">Prevenções</string>
    <string name="prevencao_list_1">"Mantenha a caixa d'água sempre fechada com tampa adequada.</string>
    <string name="prevencao_list_2">"Remova folhas, galhos e tudo que possa impedir a água de correr pelas calhas."</string>
    <string name="prevencao_list_3">Não deixe a água da chuva acumulada.</string>
...
