...
    android:id="@+id/comp_cpf"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <br.com.eucolaborador.view.util.CpfEditText
        android:id="@+id/cpf"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@drawable/edittext_bg"
        android:hint="@string/pessoa_field_cpf"
        android:inputType="number"
...
