...
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/denuncia_local_subtitle" />

            <Button
                android:id="@+id/denuncia_local_btn_endereco_informar"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/denuncia_local_btn_endereco" />

            <Button
                android:id="@+id/denuncia_local_btn_endereco_gps"
...
                android:visibility="gone"
                app:lottie_autoPlay="true"
                app:lottie_fileName="lottie-location-pin-on-a-map.json"
                app:lottie_loop="true" />

            <LinearLayout
                android:id="@+id/denuncia_local_ll_endereco"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:visibility="gone">

...
